[tool.poetry]
name = "yosafe-subpackage-3"
version = "0.1.0"
description = ""
authors = ["Yo581515 <581515@stud.hvl.no>"]
readme = "README.md"
packages = [{include = "yosafe_subpackage_3", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
