[tool.poetry]
name = "yosafe-subpackage-3"
version = "0.2.0"
description = ""
authors = ["Yo581515 <581515@stud.hvl.no>"]
readme = "README.md"
packages = [{include = "yosafe_subpackage_3", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.2"
typing-extensions = "4.6.3"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
